pingpong/templates/player-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-deployment
  labels:
    app: player
spec:
  replicas: 1
  selector:
    matchLabels:
      app: player
  template:
    metadata:
      name: player-pods
      labels:
        app: player
    spec:
      containers:
        - name: player
          image: gcr.io/project-tutorial-413803/boilerplate-pingpong-player:latest
          ports:
          - containerPort: 8888
---
kind: Service
apiVersion: v1
metadata:
  name:  player-service
spec:
  selector:
    app:  player
  type: ClusterIP
  ports:
  - port:  8888
    targetPort:  8888
