pingpong/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: pingpong
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - host: "pingpong.com"
    http:
      paths:
      - path: /api/v1/
        pathType: Prefix
        backend:
          service:
            name: player-service
            port:
              number: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-gke-extlb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: player
